2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/programs/Grass.cg, media/materials/scripts/vegetation.material
		* added parameter for waving the grass
		* use the simplegrass mesh for regular grass since it contains less vertices

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp:
		* require vertex shader capabilities for foliage

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.*:
		* fix memory leak

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	*src/components/ogre/EmberEntityFactory.cpp, src/components/ogre/EmberEntityFactory.h, src/components/ogre/AvatarCamera.h, src/components/ogre/AvatarCamera.cpp, src/components/ogre/AvatarController.cpp, src/components/ogre/EmberEntity.h, src/components/ogre/EmberOgrePrerequisites.h, src/components/ogre/MathConverter.h, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/ModelDefinitionManager.cpp, src/components/ogre/model/SubModel.cpp, src/components/ogre/jesus/Jesus.cpp, src/components/ogre/environment/Tree.cpp, src/components/ogre/environment/Water.cpp, src/components/ogre/environment/meshtree/MeshTree.cpp, src/components/ogre/environment/meshtree/TParameters.cpp, src/components/ogre/environment/meshtree/TStem.cpp, src/components/ogre/EmberSceneManager/src/*.cpp, src/components/ogre/EmberSceneManager/include/OgreTerrainRenderable.h:
		* removed Ogre memory macros since we're not using the ogre memory manager anyway
		* cleaned up old unused code
	
	*src/components/ogre/EmberOgre.cpp:
		* removed references to EntityListener
		* removed references to MetaServerService
		* removed Ogre memory macros since we're not using the ogre memory manager anyway
		* cleaned up include directives
	
	*src/components/ogre/Avatar.cpp, src/components/ogre/Avatar.h:
		* pass MovementUpdates as references
		* only update the orientation of the avatar when needed